add member, book id
