# app-library/docs/swagger.json
@@ -59,6 +59,17 @@
                     "members"
                 ],
                 "summary": "Borrow books",
+                "parameters": [
+                    {
+                        "description": "The input borrow book by member_id, book_ids, date borrowed_at",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Borrow"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -120,6 +131,17 @@
                     "members"
                 ],
                 "summary": "Return books",
+                "parameters": [
+                    {
+                        "description": "The input return book by member_id, book_ids, date returned_at",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Return"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -191,6 +213,12 @@
                 "author": {
                     "type": "string"
                 },
+                "book_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "code": {
                     "type": "string"
                 },
@@ -202,10 +230,30 @@
                 }
             }
         },
+        "models.Borrow": {
+            "type": "object",
+            "properties": {
+                "book_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "borrowed_at": {
+                    "type": "string"
+                },
+                "member_id": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Member": {
             "type": "object",
             "properties": {
                 "code": {
+                    "type": "string"
+                },
+                "member_id": {
                     "type": "string"
                 },
                 "name": {
@@ -213,6 +261,23 @@
                 },
                 "total_borrowed_books": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.Return": {
+            "type": "object",
+            "properties": {
+                "book_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "member_id": {
+                    "type": "string"
+                },
+                "returned_at": {
+                    "type": "string"
                 }
             }
         }
